tests/specs/ecosystem/std/archive/0_198_0.test
std/archive/0.198.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/internal@^0.198.0": "jsr:@std/internal@0.198.0"
    },
    "jsr": {
      "@std/internal@0.198.0": {
        "integrity": "779c633a54df83d9f341e7f495bb127b0fa205b03a5f630f6ad4111a0803498a"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  constructor(meta: TarMeta, header: TarHeader, reader: Reader | (Reader & Deno.Seeker)){}
                                                                                ~~~~~~
    at file://<tmpdir>/untar.ts:10:81

